overflow issue fix

--- a/src/stylesheets/_core.scss
+++ b/src/stylesheets/_core.scss
@@ -10,7 +10,6 @@
 html, body {
   min-height: 100%;
   min-height: 100vh;
-  overflow: auto;
 }
 
 .content {
